crates/gitat-ui/src/widgets/snapshots/gitat_ui__widgets__conflict_editor__tests__snapshot_render_initial_ours.snap
---
source: crates/gitat-ui/src/widgets/conflict_editor.rs
assertion_line: 307
expression: buffer_to_string(&buf)
---
 Conflict: test.rs — 0/1 resolved
┌ OURS ──────────────────────┐┌ THEIRS ────────────────────┐
│ours_line                   ││theirs_line                 │
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
│                            ││                            │
└────────────────────────────┘└────────────────────────────┘
┌ RESULT ──────────────────────────────────────────────────┐
│line1                                                     │
│ours_line                                                 │
│line3                                                     │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
