crates/gitat-ui/src/widgets/snapshots/gitat_ui__widgets__conflict_editor__tests__snapshot_render_second_conflict_with_theirs.snap
---
source: crates/gitat-ui/src/widgets/conflict_editor.rs
assertion_line: 386
expression: buffer_to_string(&buf)
---
 Conflict: multi.rs — 0/2 resolved
┌ OURS ───────────────────────────┐┌ THEIRS ─────────────────────────┐
│c                                ││d                                │
│                                 ││                                 │
│                                 ││                                 │
│                                 ││                                 │
│                                 ││                                 │
│                                 ││                                 │
│                                 ││                                 │
└─────────────────────────────────┘└─────────────────────────────────┘
┌ RESULT ────────────────────────────────────────────────────────────┐
│a                                                                   │
│d                                                                   │
│                                                                    │
│                                                                    │
│                                                                    │
│                                                                    │
└────────────────────────────────────────────────────────────────────┘
